--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.Material3.Light"
         tools:targetApi="31">
         <activity
-            android:name=".Login"
+            android:name=".Controlers.Auth.Login"
             android:theme="@style/Theme.Material3.Light.NoActionBar"
             android:exported="true">
             <intent-filter>
@@ -26,7 +26,7 @@
         </activity>
 
         <activity
-            android:name=".Register"
+            android:name=".Controlers.Auth.Register"
             android:theme="@style/Theme.Material3.Light.NoActionBar"
             android:exported="false">
         </activity>
