--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
         </activity>
 
         <activity
-            android:name=".MainActivity"
+            android:name=".Views.MainActivityAladdin"
             android:theme="@style/Theme.Material3.Light.NoActionBar"
             android:exported="false">
         </activity>
