--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         </activity>
 
         <activity
-            android:name=".Controlers.Auth.Register"
+            android:name=".Views.RegisterActivity"
             android:theme="@style/Theme.Material3.Light.NoActionBar"
             android:exported="false">
         </activity>
