--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,16 +16,13 @@
         tools:targetApi="31">
         <activity
 
-            android:name=".Form"
+            android:name=".Views.Form"
             android:exported="false" />
         <activity
-            android:name=".Map"
+            android:name=".Views.Map"
             android:exported="false" />
+
         <activity
-            android:name=".MainActivity"
-            android:exported="false" />
-                  
-            <activity
             android:name=".Views.LoginActivity"
             android:theme="@style/Theme.Material3.Light.NoActionBar"
             android:exported="true">
